@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha4 
+	- Fixed HTTPQ and improved parsing for urls from MPD & HTTPQ
+		they now reconize Democratic Playlists
 	- Added paging to genre sub-pages
 	- Added missing song data fields to single song view
 	- Fixed display issue with playlists when deleting a song
